--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "core-js": "^2.6.12",
     "express": "^4.18.2",
-    "gh-pages": "^4.0.0"
+    "gh-pages": "^4.0.0",
+    "vuetify": "^2.6.13"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.1",
